добавлены тесты, java doc